--- a/index.html
+++ b/index.html
@@ -272,8 +272,133 @@
 
 
 
+  <section class="services section">
+    <div class="services_inner">
+      <!-- <div class="section-title">
+        <h1 class="front-title">SERVICES WE OFFER</h1>
+        <h1 class="back-title">SERVICES WE OFFER</h1>
+      </div> -->
+      <div class="section-content">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-lg-4 col-md-6 service-col">
+
+              <div class="service-item">
+                <div class="service-icon">
+                  <i class="fa fa-flask" aria-hidden="true"></i>
+                </div>
+                <div class="caption">
+                  <h3>unlimited colors</h3>
+                  <p>Nemo lroem enim ipsam voluptaem quia voluptasd aspernatur.</p>
+                </div>
+              </div>
+
+              <div class="service-item">
+                <div class="service-icon">
+                  <i class="fa fa-flag" aria-hidden="true"></i>
+                </div>
+                <div class="caption">
+                  <h3>advanced options</h3>
+                  <p>Nemo last of lroem enim ipsam voluptaem quia voluptasd aspernatur.</p>
+                </div>
+              </div>
+
+            </div>
+            <div class="col-lg-4 col-md-6 service-col">
+              <div class="service-item">
+                <div class="service-icon">
+                  <i class="fa fa-search" aria-hidden="true"></i>
+                </div>
+                <div class="caption">
+                  <h3>seo optimized</h3>
+                  <p>Nemo last of lroem enim ipsam voluptaem quia voluptasd aspernatur.</p>
+                </div>
+              </div>
+              <div class="service-item">
+                <div class="service-icon">
+                  <i class="fa fa-bullhorn" aria-hidden="true"></i>
+                </div>
+                <div class="caption">
+                  <h3>free support</h3>
+                  <p>Nemo lroem enim ipsam voluptaem quia voluptasd aspernatur.</p>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="col-lg-4 col-md-6 col-12 service-col service-feature mt-lg-0">
+              <div class="owl-carousel services-carousel owl-theme">
+
+                <div class="item">
+                  <div class="partner-card card">
+                    <div class="partner-item">
+                      <img src="./assets/img/about/1.webp" alt="Service" class="service-item_img img-fluid" style="width: 100%;">
+                      <a href="#video" class="play-btn">
+                        <img src="./assets/img/icons/play-w.png" class="img-fluid">
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="item">
+                  <div class="partner-card card">
+                    <div class="partner-item">
+                      <img src="./assets/img/about/2.jpg" alt="Service" class="service-item_img img-fluid" style="width: 100%;">
+                      <a href="#video" class="play-btn">
+                        <img src="./assets/img/icons/play-w.png" class="img-fluid">
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                
+              </div>
+          
+
+            </div>
+
+
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="recommendations black section" style="background-image: url('./assets/img/recomond/recomm.jpg');">
+    <div class="recomm_inner">
+      <div class="section-title">
+        <h1 class="front-title">A propos de notre Enterprise</h1>
+        <h1 class="back-title">A PROPOS</h1>
+      </div>
+      <div class="section-content">
+        <div class="container cc-container">
+          <div class="row">
+
+
+
+            <div class=" col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-12  service-col">
+              <div class="recomm-item card">
+                <div class="caption">
+                  <p>SAREL est spécialisée depuis plus de 50 ans dans la commercialisation d’équipements de radiocommunication professionnel et propose des solutions innovantes et performantes dans le domaine COMINT/ELINT/SIGINT. <span></span> Aujourd’hui, SAREL offre des solutions personnalisées, adaptées aux exigences de ses clients. SAREL s’adapte aux différentes activités et étudie chacune des problématiques dont ses clients sont exposés en les complémentant de ses conseils, accompagnements et suivi afin de résoudre leurs difficultés.</p>                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
   <section class="mt-5 smain-slider">
-    <div class="main-sslider_inner" style="height: 200vh;">
+    <div class="main-sslider_inner" style="height: 50vh;">
 
     </div>
   </section>
@@ -285,7 +410,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="./assets/js/owl.carousel.min.js"></script>
   <script>
-    var numberof = 4;
+    var numberof = 3;
   </script>
   <script src="./assets/js/script.js"></script>
 
