footer + slides autoplay

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <div class="owl-carousel slider-carousel">
         <div class="item">
 
-          <div class="slider-item" style="background-image:url('./assets/img/sliders/slider-bg-1.jpg')">
+          <div class="slider-item" style="background-image:url('./assets/img/sliders/bg4.webp')">
             <div class="slider-content container">
               <div class="row" style="margin-left: 0;margin-right: 0;padding: 0px 0;">
                 <div class="col-md-12 text-center">
@@ -170,7 +170,7 @@
 
         <div class="item">
 
-          <div class="slider-item" style="background-image:url('./assets/img/sliders/slider-bg-1.jpg')">
+          <div class="slider-item" style="background-image:url('./assets/img/sliders/slide5.webp')">
             <div class="slider-content container">
               <div class="row" style="margin-left: 0;margin-right: 0;padding: 0px 0;">
                 <div class="col-md-12 text-center">
@@ -195,7 +195,7 @@
 
         <div class="item">
 
-          <div class="slider-item" style="background-image:url('./assets/img/sliders/slider-bg-1.jpg')">
+          <div class="slider-item" style="background-image:url('./assets/img/sliders/slide6.webp')">
             <div class="slider-content container">
               <div class="row" style="margin-left: 0;margin-right: 0;padding: 0px 0;">
                 <div class="col-md-12 text-center">
@@ -396,22 +396,111 @@
 
 
 
-
+<!-- 
   <section class="mt-5 smain-slider">
     <div class="main-sslider_inner" style="height: 50vh;">
 
     </div>
   </section>
+ -->
 
 
+
+  <div class="footer-section_outer shadow-lg">
+    <div class="footer-section">
+      <div class="container container">
+        <div class="row">
+
+
+
+          <div class="footer-block col-lg-3 col-md-6 col-12">
+            <div class="block_header">
+              <h4>Sarel</h4>
+            </div>
+            <div class="block_content">
+              <!-- <div class="logo">
+                <img src="./logo2.png" alt="Logo Colored" class="img-fluid">
+              </div> -->
+              <ul>
+                <li><i class="fa fa-phone"></i>(+213) 0659829080</li>
+                <li><i class="fa fa-envelope"></i>contact@example.com </li>
+                <li><i class="fa fa-home"></i>Alger 40045 1622 Street West</li>
+                <li><i class="fa fa-clock-o"></i>Opening Hours : 8.00AM - 21.00AM</li>
+              </ul>
+              <ul class="social-links">
+                <li><a target="_blank" href="https://facebook.com"><i class="fa fa-facebook-official"></i></a></li>
+                <li><a target="_blank" href="https://youtube.com"><i class="fa fa-youtube"></i></a></li>
+                <li><a target="_blank" href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a></li>
+                <li><a target="_blank" href="https://instagram.com"><i class="fa fa-instagram"></i></a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="footer-block col-lg-3 col-md-6 col-12">
+            <div class="block_header">
+              <h4>Liens</h4>
+            </div>
+            <div class="block_content">
+              <ul>
+                <li><a href="#a">A propos</a></li>
+                <li><a href="#a">Secteur d'activite</a></li>
+                <li><a href="#a">Services</a></li>
+                <li><a href="#a">A propos</a></li>
+                <li><a href="#a">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="footer-block col-lg-3 col-md-6 col-12">
+            <div class="block_header">
+              <h4>Produits</h4>
+            </div>
+            <div class="block_content">
+              <ul>
+                <li><a href="#a">toute</a></li>
+                <li><a href="#a">Electricté</a></li>
+                <li><a href="#a">Composants électroniques</a></li>
+                <li><a href="#a">Equipement de transmissions</a></li>
+                <li><a href="#a">Laboratoire électronique</a></li>
+              </ul>
+            </div>
+          </div>     
+
+          <div class="footer-block locations col-lg-3 col-md-6 col-12">
+            <div class="block_header">
+              <h4>Notre location</h4>
+            </div>
+            <div class="block_content">
+              <!-- <img src="./assets/img/locations.png" alt="our location" class="img-fluid"> -->
+              <div class="map-holder col-12">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12795.497345014184!2d3.1945508!3d36.7015575!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x67c52822403ee9ca!2sSAREL%20INDUSTRIES%20sarl!5e0!3m2!1sen!2sdz!4v1621287609346!5m2!1sen!2sdz" height="300"
+                  style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="copyright-section_outer">
+    <div class="copyright-section">
+      <div class="container cc-container">
+        <div class="row">
+          <div class="col-sm-12 col-12">
+            Copyright © 2022 <a href="#">REVA</a>. All Rights Reserved.
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="./assets/js/owl.carousel.min.js"></script>
-  <script>
-    var numberof = 3;
-  </script>
   <script src="./assets/js/script.js"></script>
 
 </body>
