--- a/index2.html
+++ b/index2.html
@@ -142,12 +142,13 @@
 
 
 
+
   <section class="main-slider">
     <div class="main-slider_inner">
       <div class="owl-carousel slider-carousel">
         <div class="item">
 
-          <div class="slider-item" style="background-image:url('./assets/img/sliders/slider-bg-1.jpg')">
+          <div class="slider-item" style="background-image:url('./assets/img/sliders/bg4.webp')">
             <div class="slider-content container">
               <div class="row" style="margin-left: 0;margin-right: 0;padding: 0px 0;">
                 <div class="col-md-12 text-center">
@@ -170,7 +171,7 @@
 
         <div class="item">
 
-          <div class="slider-item" style="background-image:url('./assets/img/sliders/slider-bg-1.jpg')">
+          <div class="slider-item" style="background-image:url('./assets/img/sliders/slide5.webp')">
             <div class="slider-content container">
               <div class="row" style="margin-left: 0;margin-right: 0;padding: 0px 0;">
                 <div class="col-md-12 text-center">
@@ -195,7 +196,7 @@
 
         <div class="item">
 
-          <div class="slider-item" style="background-image:url('./assets/img/sliders/slider-bg-1.jpg')">
+          <div class="slider-item" style="background-image:url('./assets/img/sliders/slide6.webp')">
             <div class="slider-content container">
               <div class="row" style="margin-left: 0;margin-right: 0;padding: 0px 0;">
                 <div class="col-md-12 text-center">
@@ -272,13 +273,215 @@
 
 
 
-  <section class="mt-5 smain-slider">
-    <div class="main-sslider_inner" style="height: 200vh;">
+  <section class="services section">
+    <div class="services_inner">
+      <!-- <div class="section-title">
+        <h1 class="front-title">SERVICES WE OFFER</h1>
+        <h1 class="back-title">SERVICES WE OFFER</h1>
+      </div> -->
+      <div class="section-content">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-lg-4 col-md-6 service-col">
 
+              <div class="service-item">
+                <div class="service-icon">
+                  <i class="fa fa-flask" aria-hidden="true"></i>
+                </div>
+                <div class="caption">
+                  <h3>unlimited colors</h3>
+                  <p>Nemo lroem enim ipsam voluptaem quia voluptasd aspernatur.</p>
+                </div>
+              </div>
+
+              <div class="service-item">
+                <div class="service-icon">
+                  <i class="fa fa-flag" aria-hidden="true"></i>
+                </div>
+                <div class="caption">
+                  <h3>advanced options</h3>
+                  <p>Nemo last of lroem enim ipsam voluptaem quia voluptasd aspernatur.</p>
+                </div>
+              </div>
+
+            </div>
+            <div class="col-lg-4 col-md-6 service-col">
+              <div class="service-item">
+                <div class="service-icon">
+                  <i class="fa fa-search" aria-hidden="true"></i>
+                </div>
+                <div class="caption">
+                  <h3>seo optimized</h3>
+                  <p>Nemo last of lroem enim ipsam voluptaem quia voluptasd aspernatur.</p>
+                </div>
+              </div>
+              <div class="service-item">
+                <div class="service-icon">
+                  <i class="fa fa-bullhorn" aria-hidden="true"></i>
+                </div>
+                <div class="caption">
+                  <h3>free support</h3>
+                  <p>Nemo lroem enim ipsam voluptaem quia voluptasd aspernatur.</p>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="col-lg-4 col-md-6 col-12 service-col service-feature mt-lg-0">
+              <div class="owl-carousel services-carousel owl-theme">
+
+                <div class="item">
+                  <div class="partner-card card">
+                    <div class="partner-item">
+                      <img src="./assets/img/about/1.webp" alt="Service" class="service-item_img img-fluid" style="width: 100%;">
+                      <a href="#video" class="play-btn">
+                        <img src="./assets/img/icons/play-w.png" class="img-fluid">
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="item">
+                  <div class="partner-card card">
+                    <div class="partner-item">
+                      <img src="./assets/img/about/2.jpg" alt="Service" class="service-item_img img-fluid" style="width: 100%;">
+                      <a href="#video" class="play-btn">
+                        <img src="./assets/img/icons/play-w.png" class="img-fluid">
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                
+              </div>
+          
+
+            </div>
+
+
+
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
 
+  <section class="recommendations black section" style="background-image: url('./assets/img/recomond/recomm.jpg');">
+    <div class="recomm_inner">
+      <div class="section-title">
+        <h1 class="front-title">A propos de notre Enterprise</h1>
+        <h1 class="back-title">A PROPOS</h1>
+      </div>
+      <div class="section-content">
+        <div class="container cc-container">
+          <div class="row">
+
+
+
+            <div class=" col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-12  service-col">
+              <div class="recomm-item card">
+                <div class="caption">
+                  <p>SAREL est spécialisée depuis plus de 50 ans dans la commercialisation d’équipements de radiocommunication professionnel et propose des solutions innovantes et performantes dans le domaine COMINT/ELINT/SIGINT. <span></span> Aujourd’hui, SAREL offre des solutions personnalisées, adaptées aux exigences de ses clients. SAREL s’adapte aux différentes activités et étudie chacune des problématiques dont ses clients sont exposés en les complémentant de ses conseils, accompagnements et suivi afin de résoudre leurs difficultés.</p>                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+<!-- 
+  <section class="mt-5 smain-slider">
+    <div class="main-sslider_inner" style="height: 50vh;">
+
+    </div>
+  </section>
+ -->
+
+
+
+  <div class="footer-section_outer shadow-lg">
+    <div class="footer-section">
+      <div class="container container">
+        <div class="row">
+
+
+
+          <div class="footer-block col-lg-3 col-md-6 col-12">
+            <div class="block_header">
+              <h4>Sarel</h4>
+            </div>
+            <div class="block_content">
+              <!-- <div class="logo">
+                <img src="./logo2.png" alt="Logo Colored" class="img-fluid">
+              </div> -->
+              <ul>
+                <li><i class="fa fa-phone"></i>(+213) 0659829080</li>
+                <li><i class="fa fa-envelope"></i>contact@example.com </li>
+                <li><i class="fa fa-home"></i>Alger 40045 1622 Street West</li>
+                <li><i class="fa fa-clock-o"></i>Opening Hours : 8.00AM - 21.00AM</li>
+              </ul>
+              <ul class="social-links">
+                <li><a target="_blank" href="https://facebook.com"><i class="fa fa-facebook-official"></i></a></li>
+                <li><a target="_blank" href="https://youtube.com"><i class="fa fa-youtube"></i></a></li>
+                <li><a target="_blank" href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a></li>
+                <li><a target="_blank" href="https://instagram.com"><i class="fa fa-instagram"></i></a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="footer-block col-lg-3 col-md-6 col-12">
+            <div class="block_header">
+              <h4>Liens</h4>
+            </div>
+            <div class="block_content">
+              <ul>
+                <li><a href="#a">A propos</a></li>
+                <li><a href="#a">Secteur d'activite</a></li>
+                <li><a href="#a">Services</a></li>
+                <li><a href="#a">A propos</a></li>
+                <li><a href="#a">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+
+
+          <div class="footer-block locations col-lg-6 col-md-12 col-12">
+            <div class="block_header">
+              <h4>Notre location</h4>
+            </div>
+            <div class="block_content">
+              <div class="map-holder col-12">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12795.497345014184!2d3.1945508!3d36.7015575!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x67c52822403ee9ca!2sSAREL%20INDUSTRIES%20sarl!5e0!3m2!1sen!2sdz!4v1621287609346!5m2!1sen!2sdz" height="300"
+                  style="border:0;width: 100%;" allowfullscreen="" loading="lazy"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="copyright-section_outer">
+    <div class="copyright-section">
+      <div class="container cc-container">
+        <div class="row">
+          <div class="col-sm-12 col-12">
+            Copyright © 2022 <a href="#">REVA</a>. All Rights Reserved.
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
