services images + title

--- a/index2222.html
+++ b/index2222.html
@@ -142,7 +142,6 @@
 
 
 
-
   <section class="main-slider">
     <div class="main-slider_inner">
       <div class="owl-carousel slider-carousel">
@@ -452,15 +451,30 @@
             </div>
           </div>
 
+          <div class="footer-block col-lg-3 col-md-6 col-12">
+            <div class="block_header">
+              <h4>Produits</h4>
+            </div>
+            <div class="block_content">
+              <ul>
+                <li><a href="#a">toute</a></li>
+                <li><a href="#a">Electricté</a></li>
+                <li><a href="#a">Composants électroniques</a></li>
+                <li><a href="#a">Equipement de transmissions</a></li>
+                <li><a href="#a">Laboratoire électronique</a></li>
+              </ul>
+            </div>
+          </div>     
 
-          <div class="footer-block locations col-lg-6 col-md-12 col-12">
+          <div class="footer-block locations col-lg-3 col-md-6 col-12">
             <div class="block_header">
               <h4>Notre location</h4>
             </div>
             <div class="block_content">
+              <!-- <img src="./assets/img/locations.png" alt="our location" class="img-fluid"> -->
               <div class="map-holder col-12">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12795.497345014184!2d3.1945508!3d36.7015575!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x67c52822403ee9ca!2sSAREL%20INDUSTRIES%20sarl!5e0!3m2!1sen!2sdz!4v1621287609346!5m2!1sen!2sdz" height="300"
-                  style="border:0;width: 100%;" allowfullscreen="" loading="lazy"></iframe>
+                  style="border:0;" allowfullscreen="" loading="lazy"></iframe>
               </div>
             </div>
           </div>
@@ -487,9 +501,6 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="./assets/js/owl.carousel.min.js"></script>
-  <script>
-    var numberof = 3;
-  </script>
   <script src="./assets/js/script.js"></script>
 
 </body>
