--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 
 
 
+
   <section class="main-slider">
     <div class="main-slider_inner">
       <div class="owl-carousel slider-carousel">
@@ -274,57 +275,64 @@
 
   <section class="services section">
     <div class="services_inner">
-      <!-- <div class="section-title">
-        <h1 class="front-title">SERVICES WE OFFER</h1>
-        <h1 class="back-title">SERVICES WE OFFER</h1>
-      </div> -->
+ 
       <div class="section-content">
         <div class="container">
-          <div class="row align-items-center">
-            <div class="col-lg-4 col-md-6 service-col">
+          <div class="row">
 
-              <div class="service-item">
-                <div class="service-icon">
-                  <i class="fa fa-flask" aria-hidden="true"></i>
+            <div class="col-lg-8 col-md-12 col-12">
+                <div class="row">
+                  <div class="col-12">
+                    <div class="section-title">
+                      <h1 class="front-title">notre services</h1>
+                      <h1 class="back-title">SERVICES QUE NOUS OFFRONS</h1>
+                    </div>
+                  </div>
+                  <div class="col-md-6 col-12 service-col">
+                    <div class="service-item">
+                      <div class="service-icon">
+                        <!-- <i class="fa fa-flask" aria-hidden="true"></i> -->
+                        <img data-holder-rendered="true" src="./assets/img/icons/handshake.png" alt="Expert Team">
+                      </div>
+                      <div class="caption">
+                        <h3>unlimited colors</h3>
+                        <p>Nemo lroem enim ipsam voluptaem quia voluptasd aspernatur.</p>
+                      </div>
+                    </div>
+                    <div class="service-item">
+                      <div class="service-icon">
+                        <!-- <i class="fa fa-flag" aria-hidden="true"></i> -->
+                        <img data-holder-rendered="true" src="./assets/img/icons/handshake.png" alt="Expert Team">
+                      </div>
+                      <div class="caption">
+                        <h3>advanced options</h3>
+                        <p>Nemo last of lroem enim ipsam voluptaem quia voluptasd aspernatur.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6 col-12 service-col">
+                    <div class="service-item">
+                      <div class="service-icon">
+                        <img data-holder-rendered="true" src="./assets/img/icons/handshake.png" alt="Expert Team">
+                      </div>
+                      <div class="caption">
+                        <h3>seo optimized</h3>
+                        <p>Nemo last of lroem enim ipsam voluptaem quia voluptasd aspernatur.</p>
+                      </div>
+                    </div>
+                    <div class="service-item">
+                      <div class="service-icon">
+                        <!-- <i class="fa fa-bullhorn" aria-hidden="true"></i> -->
+                        <img data-holder-rendered="true" src="./assets/img/icons/handshake.png" alt="Expert Team">
+                      </div>
+                      <div class="caption">
+                        <h3>free support</h3>
+                        <p>Nemo lroem enim ipsam voluptaem quia voluptasd aspernatur.</p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <div class="caption">
-                  <h3>unlimited colors</h3>
-                  <p>Nemo lroem enim ipsam voluptaem quia voluptasd aspernatur.</p>
-                </div>
-              </div>
-
-              <div class="service-item">
-                <div class="service-icon">
-                  <i class="fa fa-flag" aria-hidden="true"></i>
-                </div>
-                <div class="caption">
-                  <h3>advanced options</h3>
-                  <p>Nemo last of lroem enim ipsam voluptaem quia voluptasd aspernatur.</p>
-                </div>
-              </div>
-
             </div>
-            <div class="col-lg-4 col-md-6 service-col">
-              <div class="service-item">
-                <div class="service-icon">
-                  <i class="fa fa-search" aria-hidden="true"></i>
-                </div>
-                <div class="caption">
-                  <h3>seo optimized</h3>
-                  <p>Nemo last of lroem enim ipsam voluptaem quia voluptasd aspernatur.</p>
-                </div>
-              </div>
-              <div class="service-item">
-                <div class="service-icon">
-                  <i class="fa fa-bullhorn" aria-hidden="true"></i>
-                </div>
-                <div class="caption">
-                  <h3>free support</h3>
-                  <p>Nemo lroem enim ipsam voluptaem quia voluptasd aspernatur.</p>
-                </div>
-              </div>
-            </div>
-
 
             <div class="col-lg-4 col-md-6 col-12 service-col service-feature mt-lg-0">
               <div class="owl-carousel services-carousel owl-theme">
@@ -451,30 +459,15 @@
             </div>
           </div>
 
-          <div class="footer-block col-lg-3 col-md-6 col-12">
-            <div class="block_header">
-              <h4>Produits</h4>
-            </div>
-            <div class="block_content">
-              <ul>
-                <li><a href="#a">toute</a></li>
-                <li><a href="#a">Electricté</a></li>
-                <li><a href="#a">Composants électroniques</a></li>
-                <li><a href="#a">Equipement de transmissions</a></li>
-                <li><a href="#a">Laboratoire électronique</a></li>
-              </ul>
-            </div>
-          </div>     
 
-          <div class="footer-block locations col-lg-3 col-md-6 col-12">
+          <div class="footer-block locations col-lg-6 col-md-12 col-12">
             <div class="block_header">
               <h4>Notre location</h4>
             </div>
             <div class="block_content">
-              <!-- <img src="./assets/img/locations.png" alt="our location" class="img-fluid"> -->
               <div class="map-holder col-12">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12795.497345014184!2d3.1945508!3d36.7015575!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x67c52822403ee9ca!2sSAREL%20INDUSTRIES%20sarl!5e0!3m2!1sen!2sdz!4v1621287609346!5m2!1sen!2sdz" height="300"
-                  style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                  style="border:0;width: 100%;" allowfullscreen="" loading="lazy"></iframe>
               </div>
             </div>
           </div>
@@ -501,6 +494,9 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="./assets/js/owl.carousel.min.js"></script>
+  <script>
+    var numberof = 3;
+  </script>
   <script src="./assets/js/script.js"></script>
 
 </body>
